prod-service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: peak6
  name: peak6
spec: 
  ports: 
  - port: 5000
    targetPort: 5000
  selector: 
    app: peak6
    type: LoadBalancer
