prod-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: peak6
  namespace: default
spec:
  rules:
  - host: peak6.imorti.com
    http:
      paths:
      - backend:
          serviceName: peak6
          servicePort: 5000
        path: /
